Version 10.4.154 - 2 August 2007, by Pascal "Pixel" Rigaux

- drop supermount support
- diskdrake: drop "Rescue partition table" feature 
  (was based on rescuept which has been dropped in util-linux, but was quite
  bad compared to testdisk anyway)

Version 10.4.150 - 24 July 2007, by Olivier "blino" Blin
- update banner for 2008 beta 1 (from Anne)

Version 10.4.149 - 17 July 2007, by Olivier "blino" Blin
- fix build of wireless binding with latest kernel headers

Version 10.4.148 - 17 July 2007, by Olivier "blino" Blin

- add ide-disk module in disk/raw
- load ide-disk module when loading disk/ide category

Version 10.4.147 - 12 July 2007, by Pascal "Pixel" Rigaux

- allow using sqlite for rpmdb when using option rpm_dbapi=4
- add /LIB/udev/usb_id which is needed by mouse.pm to generate /dev/input/by-id/xxx

Version 10.4.142 - 2 July 2007, by Pascal "Pixel" Rigaux

- brown paper bag fix (stage1 can't create symlink /etc/rpm/platform)

Version 10.4.141 - 29 June 2007, by Pascal "Pixel" Rigaux

- bundle /etc/rpm/platform for rpm 4.4.8
- use modularized ide drivers and configure ide-controller in modprobe.conf
- auto_install:
  o allow "automatic=met:http,ser:server,dir:/pub/dir
    kickstart=/pub/auto_inst.cfg" to get http://server/pub/auto_inst.cfg (#31474)
  o ensure /etc/resolv.conf is configured in /mnt for network installs
- add /etc/mke2fs.conf in order to format ext3fs with 4k blocks (#27377)
- diskdrake
  o fix 1.9TB displayed as 1TB
- do not ask for updates at end of installation when updates are already
  available (network installs) (#30344)
- do not try to configure dvd devices since /dev is wiped out at
  reboot
- fix detecting usb drives (#13395)
  (need a perl-MDK-Common 1.2.5)
- hw support:
  o handle snd-cs5530 driver
- install fonts-ttf-dejavu & fonts-ttf-liberation by default
- allow umounting cdrom during a transaction
- really allow having name with "/" in media.cfg
- use "mkfs.ext3" instead of "mkfs.ext2 -J"