@@ -35,7 +35,7 @@
   </if>
   quotacheck
 
-  consolechars kbd_mode
+  setfont kbd_mode
   Xorg xmodmap xset
   fb2png
   perl
