@@ -1,3 +1,5 @@
+- use kbd (setfont) instead of console-tools (consolechars)
+
 Version 10.4.154 - 2 August 2007, by Pascal "Pixel" Rigaux
 
 - drop supermount support
